--- a/WMS_DEPI_GRAD/Views/Outbound/Index.cshtml
+++ b/WMS_DEPI_GRAD/Views/Outbound/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<WMS_DEPI_GRAD.SalesOrder>
+﻿@using WMS_DEPI_GRAD.Models
+@model List<SalesOrder>
 
 @{
 	ViewData["Title"] = "Outbound Management";
