--- a/WMS_DEPI_GRAD/Views/SalesOrder/GetSalesOrder.cshtml
+++ b/WMS_DEPI_GRAD/Views/SalesOrder/GetSalesOrder.cshtml
@@ -1,4 +1,5 @@
-﻿@model SalesOrder
+﻿@using WMS_DEPI_GRAD.Models
+@model SalesOrder
 <div class="container">
     <h1 class="mt-4">Processing Order <span class="text-primary-orange">#@Model.Id</span></h1>
 
