added rest of the entities

--- a/WMS_DEPI_GRAD/Views/TransferOrders/Index.cshtml
+++ b/WMS_DEPI_GRAD/Views/TransferOrders/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<WMS_DEPI_GRAD.Models.TransferOrder>
+﻿@model List<WMS_DEPI_GRAD.Models.TransferOrderModel>
 
 @{
     ViewData["Title"] = "Transfer Orders";
