--- a/WMS_DEPI_GRAD/Views/Outbound/Index.cshtml
+++ b/WMS_DEPI_GRAD/Views/Outbound/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WMS_DEPI_GRAD.Models
-@model List<SalesOrder>
+@model List<SalesOrderModel>
 
 @{
 	ViewData["Title"] = "Outbound Management";
