--- a/WMS_DEPI_GRAD/Views/Receipt/GetReceipt.cshtml
+++ b/WMS_DEPI_GRAD/Views/Receipt/GetReceipt.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WMS_DEPI_GRAD.Models
-@model Receipt
+@model ReceiptModel
 <div class="container">
     <h1 class="mt-4">Processing Receipt <span class="text-primary-orange">#@Model.Id</span></h1>
 
