--- a/WMS_DEPI_GRAD/Views/Account/Index.cshtml
+++ b/WMS_DEPI_GRAD/Views/Account/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_AuthLayout.cshtml";
+}
 
 <div class="container my-5">
     <h1 class="text-primary-orange">Account Login</h1>
