create forget Password

--- a/WMS_DEPI_GRAD/Views/Account/ForgotPassword.cshtml
+++ b/WMS_DEPI_GRAD/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model WMS_DEPI_GRAD.ViewModels.ForgetPasswordViewModel
+
+
+@{
     Layout = "~/Views/Shared/_AuthLayout.cshtml";
 }
 
@@ -12,7 +15,8 @@
             <form>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input asp-for="Email"   class="form-control" id="xampleInputEmail1" aria-describedby="emailHelp">
+                    <span asp-validation-for="Email"></span>
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 
@@ -25,3 +29,7 @@
 
 
 </div>
+@section scripts {
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
