--- a/WMS_DEPI_GRAD/Views/Account/Login.cshtml
+++ b/WMS_DEPI_GRAD/Views/Account/Login.cshtml
@@ -26,6 +26,9 @@
                 <div class="mb-3 forgot-password">
                     <a asp-controller="Account" asp-action="ForgotPassword" class="text-primary-orange">Forgot Password?</a>
                 </div>
+                <div class="mb-3 forgot-password">
+                    <a asp-controller="Account" asp-action="Register" class="text-primary-orange">Register</a>
+                </div>
 
                 <button type="submit" class="btn btn-hero-primary">Submit</button>
             </form>
