--- a/WMS_DEPI_GRAD/Views/Account/Register.cshtml
+++ b/WMS_DEPI_GRAD/Views/Account/Register.cshtml
@@ -39,7 +39,7 @@
                 <!-- Phone -->
                 <div class="mb-3">
                     <label asp-for="PhoneNumber" class="form-label"></label>
-                    <input asp-for="PhoneNumber" class="form-control" placeholder="Enter Phone Number" />
+                    <input asp-for="PhoneNumber" type="tel" class="form-control" placeholder="Enter Phone Number" />
                     <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                 </div>
 
