--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -101,11 +101,14 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">
-						<i class="fas fa-sign-out-alt nav-icon"></i>
-						<span class="nav-text">Logout</span>
-					</a>
+					<form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+						<button type="submit" class="btn btn-link nav-link">
+							<i class="fas fa-sign-out-alt nav-icon"></i>
+							<span class="nav-text">Logout</span>
+						</button>
+					</form>
 				</li>
+
 			</ul>
 		</div>
 	</nav>
