--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -89,6 +89,12 @@
 					</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<i class="fas fa-cog nav-icon"></i>
+						<span class="nav-text">Manage Roles</span>
+					</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="/Home/Privacy">
 						<i class="fas fa-user-shield nav-icon"></i>
 						<span class="nav-text">Privacy</span>
