--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -33,13 +33,6 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/Account/Index">
-						<i class="fas fa-sign-in-alt nav-icon"></i>
-						<span class="nav-text">Login</span>
-					</a>
-
-				</li>
-				<li class="nav-item">
 					<a class="nav-link" href="/Inventory/Index">
 						<i class="fas fa-boxes nav-icon"></i>
 						<span class="nav-text">Inventory</span>
@@ -108,7 +101,7 @@
 				</li>
 				<li class="nav-item">
 					<form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
-						<button type="submit" class="btn btn-link nav-link">
+						<button type="submit" class="btn btn-link nav-link d-flex justify-content-center align-items-center w-100">
 							<i class="fas fa-sign-out-alt nav-icon"></i>
 							<span class="nav-text">Logout</span>
 						</button>
