--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">
+					<a class="nav-link" href="/Profile/Index">
 						<i class="fas fa-user nav-icon"></i>
 						<span class="nav-text">Profile</span>
 					</a>
