--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -25,83 +25,138 @@
 			</div>
 		</div>
 		<div class="sidebar-content">
-			<ul class="nav flex-column">
+			<ul class="nav flex-column" id="sidebarNav">
+				<!-- Dashboard -->
 				<li class="nav-item">
 					<a class="nav-link" href="/Home/Index">
 						<i class="fas fa-home nav-icon"></i>
-						<span class="nav-text">Home</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/Inventory/Index">
-						<i class="fas fa-boxes nav-icon"></i>
-						<span class="nav-text">Inventory</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/Receipt/Index">
-						<i class="fas fa-arrow-circle-up nav-icon"></i>
-						<span class="nav-text">Inbound</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/SalesOrder/Index">
-						<i class="fas fa-truck-arrow-right nav-icon"></i>
-						<span class="nav-text">Outbound</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/TransferOrders/Index">
-						<i class="fas fa-right-left nav-icon"></i>
-						<span class="nav-text">Transfer Orders</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/Workers/Index">
-						<i class="fas fa-users nav-icon"></i>
-						<span class="nav-text">Workers</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/Location/Index">
-						<i class="fas fa-warehouse nav-icon"></i>
-						<span class="nav-text">Location</span>
+						<span class="nav-text">Dashboard</span>
 					</a>
 				</li>
 
+				<!-- Master Data -->
 				<li class="nav-item">
-					<a class="nav-link" href="#">
+					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#masterDataCollapse">
+						<i class="fas fa-database nav-icon"></i>
+						<span class="nav-text">Master Data</span>
+						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
+					</a>
+					<div class="collapse" id="masterDataCollapse" data-bs-parent="#sidebarNav">
+						<ul class="nav flex-column ms-3">
+							<li class="nav-item"><a class="nav-link" href="/Location/Index"><span class="nav-text">Locations</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/WarehouseList"><span class="nav-text">Warehouses</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/ZoneList"><span class="nav-text">Zones</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/AisleList"><span class="nav-text">Aisles</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/RackList"><span class="nav-text">Racks</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/BinList"><span class="nav-text">Bins</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/BinTypeList"><span class="nav-text">Bin Types</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/ProductList"><span class="nav-text">Products</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/SupplierList"><span class="nav-text">Suppliers</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/MasterData/CustomerList"><span class="nav-text">Customers</span></a></li>
+						</ul>
+					</div>
+				</li>
+
+				<!-- Procurement Cycle -->
+				<li class="nav-item">
+					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#procurementCollapse">
+						<i class="fas fa-shopping-cart nav-icon"></i>
+						<span class="nav-text">Procurement</span>
+						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
+					</a>
+					<div class="collapse" id="procurementCollapse" data-bs-parent="#sidebarNav">
+						<ul class="nav flex-column ms-3">
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Purchase Orders</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">ASNs</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Receipt/Index"><span class="nav-text">Receipts</span></a></li>
+						</ul>
+					</div>
+				</li>
+
+				<!-- Inventory Management -->
+				<li class="nav-item">
+					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#inventoryCollapse">
+						<i class="fas fa-boxes nav-icon"></i>
+						<span class="nav-text">Inventory</span>
+						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
+					</a>
+					<div class="collapse" id="inventoryCollapse" data-bs-parent="#sidebarNav">
+						<ul class="nav flex-column ms-3">
+							<li class="nav-item"><a class="nav-link" href="/Inventory/Index"><span class="nav-text">Inventory List</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Putaway</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Picking</span></a></li>
+						</ul>
+					</div>
+				</li>
+
+				<!-- Orders / Sales -->
+				<li class="nav-item">
+					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#salesCollapse">
+						<i class="fas fa-truck-arrow-right nav-icon"></i>
+						<span class="nav-text">Orders / Sales</span>
+						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
+					</a>
+					<div class="collapse" id="salesCollapse" data-bs-parent="#sidebarNav">
+						<ul class="nav flex-column ms-3">
+							<li class="nav-item"><a class="nav-link" href="/SalesOrder/Index"><span class="nav-text">Sales Orders</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Picking</span></a></li>
+						</ul>
+					</div>
+				</li>
+
+				<!-- Transfers -->
+				<li class="nav-item">
+					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#transfersCollapse">
+						<i class="fas fa-right-left nav-icon"></i>
+						<span class="nav-text">Transfers</span>
+						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
+					</a>
+					<div class="collapse" id="transfersCollapse" data-bs-parent="#sidebarNav">
+						<ul class="nav flex-column ms-3">
+							<li class="nav-item"><a class="nav-link" href="/TransferOrders/Index"><span class="nav-text">Transfer Orders</span></a></li>
+						</ul>
+					</div>
+				</li>
+
+				<!-- Reports / Analytics -->
+				<li class="nav-item">
+					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#reportsCollapse">
 						<i class="fas fa-chart-bar nav-icon"></i>
 						<span class="nav-text">Reports</span>
+						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
 					</a>
+					<div class="collapse" id="reportsCollapse" data-bs-parent="#sidebarNav">
+						<ul class="nav flex-column ms-3">
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Stock Reports</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">PO / ASN Reports</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Inventory Movement</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Discrepancy Reports</span></a></li>
+						</ul>
+					</div>
 				</li>
+
+				<!-- Settings / Users -->
 				<li class="nav-item">
-					<a class="nav-link" href="#">
+					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#settingsCollapse">
 						<i class="fas fa-cog nav-icon"></i>
-						<span class="nav-text">Settings</span>
+						<span class="nav-text">Settings / Users</span>
+						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
 					</a>
+					<div class="collapse" id="settingsCollapse" data-bs-parent="#sidebarNav">
+						<ul class="nav flex-column ms-3">
+							<li class="nav-item"><a class="nav-link" href="/Workers/Index"><span class="nav-text">User Management</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Roles & Permissions</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">System Settings</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Profile/Index"><span class="nav-text">Profile</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Home/Privacy"><span class="nav-text">Privacy</span></a></li>
+						</ul>
+					</div>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">
-						<i class="fas fa-cog nav-icon"></i>
-						<span class="nav-text">Manage Roles</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/Home/Privacy">
-						<i class="fas fa-user-shield nav-icon"></i>
-						<span class="nav-text">Privacy</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/Profile/Index">
-						<i class="fas fa-user nav-icon"></i>
-						<span class="nav-text">Profile</span>
-					</a>
-				</li>
-				<li class="nav-item">
+
+				<!-- Logout -->
+				<li class="nav-item mt-3">
 					<form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
-						<button type="submit" class="btn btn-link nav-link d-flex justify-content-center align-items-center w-100">
+						<button type="submit" class="btn btn-link nav-link d-flex justify-content-start align-items-center w-100">
 							<i class="fas fa-sign-out-alt nav-icon"></i>
 							<span class="nav-text">Logout</span>
 						</button>
