Create WH Operations

--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 					<div class="collapse" id="masterDataCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
 							<li class="nav-item"><a class="nav-link" href="/Location/Index"><span class="nav-text">Locations</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/MasterData/WarehouseList"><span class="nav-text">Warehouses</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Warehouse/Index"><span class="nav-text">Warehouses</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/ZoneList"><span class="nav-text">Zones</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/AisleList"><span class="nav-text">Aisles</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/RackList"><span class="nav-text">Racks</span></a></li>
