Warehouse, Zone, Aisle CRUD Operation

--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
 						<ul class="nav flex-column ms-3">
 							<li class="nav-item"><a class="nav-link" href="/Location/Index"><span class="nav-text">Locations</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Warehouse/Index"><span class="nav-text">Warehouses</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/MasterData/ZoneList"><span class="nav-text">Zones</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/MasterData/AisleList"><span class="nav-text">Aisles</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Zone/Index"><span class="nav-text">Zones</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Aisle/Index"><span class="nav-text">Aisles</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/RackList"><span class="nav-text">Racks</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/BinList"><span class="nav-text">Bins</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/BinTypeList"><span class="nav-text">Bin Types</span></a></li>
