--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 							<li class="nav-item"><a class="nav-link" href="/Warehouse/Index"><span class="nav-text">Warehouses</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Zone/Index"><span class="nav-text">Zones</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Aisle/Index"><span class="nav-text">Aisles</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/MasterData/RackList"><span class="nav-text">Racks</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Rack/Index"><span class="nav-text">Racks</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/BinList"><span class="nav-text">Bins</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/BinTypeList"><span class="nav-text">Bin Types</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/MasterData/ProductList"><span class="nav-text">Products</span></a></li>
