--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -137,16 +137,16 @@
 
 				<!-- Settings / Users -->
 				<li class="nav-item">
-					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#settingsCollapse">
+					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#settingsCollapse" aria-expanded="false" aria-controls="settingsCollapse">
 						<i class="fas fa-cog nav-icon"></i>
 						<span class="nav-text">Settings / Users</span>
 						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
 					</a>
 					<div class="collapse" id="settingsCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
-							<li class="nav-item"><a class="nav-link" href="/Workers/Index"><span class="nav-text">User Management</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Roles & Permissions</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">System Settings</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/User/Index"><span class="nav-text">User Management</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Role/Index"><span class="nav-text">Roles & Permissions</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Settings/Index"><span class="nav-text">System Settings</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Profile/Index"><span class="nav-text">Profile</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Home/Privacy"><span class="nav-text">Privacy</span></a></li>
 						</ul>
