Create User View Model

--- a/WMS_DEPI_GRAD/Views/User/Create.cshtml
+++ b/WMS_DEPI_GRAD/Views/User/Create.cshtml
@@ -1,4 +1,4 @@
-@model WMS_DEPI_GRAD.ViewModels.UserViewModel
+@model WMS_DEPI_GRAD.ViewModels.CreateUserViewModel
 
 @{
     ViewData["Title"] = "Create User";
