--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -66,8 +66,8 @@
 					</a>
 					<div class="collapse" id="procurementCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Purchase Orders</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">ASNs</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/PurchaseOrder/Index"><span class="nav-text">Purchase Orders</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/ASN/Index"><span class="nav-text">ASNs</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Receipt/Index"><span class="nav-text">Receipts</span></a></li>
 						</ul>
 					</div>
