--- a/WMS_DEPI_GRAD/Views/PurchaseOrder/Edit.cshtml
+++ b/WMS_DEPI_GRAD/Views/PurchaseOrder/Edit.cshtml
@@ -1,4 +1,4 @@
-@model WMS.DAL.PurchaseOrder
+@model WMS_DEPI_GRAD.ViewModels.PurchaseOrderViewModel
 
 @{
     ViewData["Title"] = "Edit Purchase Order";
